--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <video id="video" autoplay muted loop>
-    <source src="Imagens/universo.mp4" />
+    <source src="universo.mp4" />
   </video>
 
   <header class="header-bar">
@@ -52,7 +52,7 @@
       Há mais variedade escondida nessas categorias amplas. Os Júpiteres quentes, por exemplo, estiveram entre os primeiros tipos de planetas encontrados – gigantes gasosos que orbitam tão
       perto das suas estrelas que as suas temperaturas chegam a milhares de graus (Fahrenheit ou Celsius).</p>
     <div class="planeta1">
-      <img onclick="Redirection()" src="Imagens/Kepler-16b.jpeg" />
+      <img onclick="Redirection()" src="Kepler-16b.jpeg" />
         <p><b>KELT-9b</b> calor do KELT-9b é excessivo até para que as moléculas permaneçam intactas.</p>
      </div>
     <p>
@@ -62,7 +62,7 @@
       com núcleos de rochas e metais mais pesados.
     </p>
     <div class="planeta1">
-      <img onclick="Redirection2()" src="Imagens/Planeta.jpeg" />
+      <img onclick="Redirection2()" src="Planeta.jpeg" />
       <p><b>HAT-P-26b</b> possui uma atmosfera primitiva composta quase inteiramente de hidrogênio e hélio.</p>
     </div>
     <p><b>Super-Terras</b> uma classe de planetas 
@@ -71,12 +71,12 @@
       massivas que a Terra, mas mais leves que gigantes gelados como Neptuno e Úrano, e podem ser feitas de gás, rocha ou uma combinação de ambos.
       Eles têm entre o dobro do tamanho da Terra e até 10 vezes a sua massa.</p>
       <div class="planeta1">
-      <img onclick="Redirection3()" src="Imagens/Planeta3.jpeg" />
+      <img onclick="Redirection3()" src="Planeta3.jpeg" />
       <p><b>55 Cancri e</b>, também conhecido como Janssen, orbita uma estrela chamada Copérnico, a apenas 41 anos-luz de distância. </p>
     </div>
     <p><b>Os planetas terrestres</b> Em nosso sistema solar, Terra, Marte, Mercúrio e Vênus são planetas terrestres ou rochosos. Para planetas fora do nosso sistema solar, aqueles entre metade do tamanho da Terra e o dobro do seu raio são considerados terrestres e outros podem ser ainda menores. Exoplanetas com o dobro do tamanho da Terra e maiores também podem ser rochosos, mas são considerados super-Terras.</p>
     <div onclick="Redirection4()" class="planeta1">
-      <img src="Imagens/Planeta4.jpeg" />
+      <img src="Planeta4.jpeg" />
       <p><b>TRAPPIST-1e</b>, o quarto planeta a partir da estrela, está na zona habitável, o que significa que pode existir água líquida na sua superfície.</p>
       </div>
   </div>
