--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Site para testar o aprendizado em css" <title>Aprendendo css</title>
+  <meta name="description" content="Site para testar o aprendizado em css">
+  <title> Exoplanetas /title>
   <link rel="stylesheet" href="style.css">
 
 </head>
