--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       massivas que a Terra, mas mais leves que gigantes gelados como Neptuno e Úrano, e podem ser feitas de gás, rocha ou uma combinação de ambos.
       Eles têm entre o dobro do tamanho da Terra e até 10 vezes a sua massa.</p>
     <div class="planeta1">
-      <img onclick="Redirection3()" src="Planeta3.jpeg" />
+      <img onclick="Redirection3()" src="planeta3.jpeg" />
       <p><b>55 Cancri e</b>, também conhecido como Janssen, orbita uma estrela chamada Copérnico, a apenas 41 anos-luz de distância. </p>
     </div>
     <p><b>Os planetas terrestres</b> Em nosso sistema solar, Terra, Marte, Mercúrio e Vênus são planetas terrestres ou rochosos. Para planetas fora 
@@ -86,7 +86,7 @@
     são considerados terrestres e 
     outros podem ser ainda menores. Exoplanetas com o dobro do tamanho da Terra e maiores também podem ser rochosos, mas são considerados super-Terras.</p>
     <div onclick="Redirection4()" class="planeta1">
-      <img src="Planeta4.jpeg" />
+      <img src="planeta4.jpeg" />
       <p><b>TRAPPIST-1e</b>, o quarto planeta a partir da estrela, está na zona habitável, o que significa que pode existir água líquida na sua superfície.</p>
     </div>
   </div>
