--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p><b>Super-Terras</b> uma classe de planetas
       diferente de qualquer outra no
       nosso sistema solar – são mais
-      massivas que a Terra, mas mais leves que gigantes gelados como Neptuno e Úrano, e podem ser feitas de gás, rocha ou uma combinação de ambos.
+      massivas que a Terra, mas mais leves que gigantes gelados como Netuno e Úrano, e podem ser feitas de gás, rocha ou uma combinação de ambos.
       Eles têm entre o dobro do tamanho da Terra e até 10 vezes a sua massa.</p>
     <div class="planeta1">
       <img onclick="Redirection3()" src="planeta3.jpeg" />
